# gn_module_quadrige

./: MANIFEST.in  README.md  README.md:Zone.Identifier  module_code_config.toml  presse_papier.txt  quadrige_config.toml.example  requirements.txt  setup.py  to_do.md
backend/: setup.cfg
backend/gn_module_quadrige/: __init__.py  blueprint.py  build_query.py  config_schema_toml.py  extraction_data.py  extraction_programs.py  requirements_backend.txt  routes.py  utils_backend.py
backend/gn_module_quadrige/migrations/: 0001_create_object.py  0001_init_quadrige.py  0002_declare_permissions.py
backend/src/gn_module_quadrige_extraction/api/: blueprint.py
documentation/: doc_technique.md  doc_user.md  install.md  modifications_server.md
frontend/: angular.json  package.json  tsconfig.json
frontend/app/: app-routing.module.ts  app.component.ts  gnModule.module.ts  index.html  module.config.ts  routes.ts
frontend/app/components/: QuadrigeExtractionComponent.ts
frontend/app/components/extracted-links/: extracted-links.component.html  extracted-links.component.scss
frontend/app/constants/: quadrige_constants.ts
frontend/app/frontend-filter/: frontend-filter.component.html
frontend/app/services/: quadrige-config.service.ts
frontend/app/styles/: quadrige-styles.scss
gn_module_quadrige_extraction/backend/: pyproject.toml
gn_module_quadrige_extraction/backend/src/gn_module_quadrige_extraction/: __init__.py  config_schema.py
gn_module_quadrige_extraction/backend/src/gn_module_quadrige_extraction/migrations/: README.md
(+8 files in other folders)
